Anonymous Users can post without login

--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -94,7 +94,7 @@ h1 {
     font-size: 1rem;
 }
 </style>
-<h1><a href="http://tejxv.pythonanywhere.com/" style="text-decoration: none; color: black;">&nbsp;Blog</a><br></h1>
+<h1><a href="/" style="text-decoration: none; color: black;">&nbsp;Blog</a><br></h1>
 <div class="credits">→ Project by<a href="https://www.instagram.com/alexeysekisov/" style="text-decoration: none;">&nbsp;alexeysekisov,</a>, developed using Django & Python.<a href="/admin/" target="_blank" title="Login" style="text-decoration: none;">&nbsp;Ξ&nbsp;</a></div><br>
 <div class="compose" style="text-decoration: none;"><a href="{% url 'post_new' %}">POST AN UPDATE <i class="far fa-plus-square"></i></span></a></div>
 
