--- a/mysite/blog/templates/blog/post_edit.html
+++ b/mysite/blog/templates/blog/post_edit.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
 <br>
-    <div style="font-size: 1.5rem;">latest posts will appear on the bottom of the website!</div>
+    <div style="font-size: 1.5rem;">Latest posts will appear on the top of the website!</div>
     <div class="posts"><form method="POST" class="token">{% csrf_token %}
         {{ form.as_p }}
         <center><button type="submit" class="submit"> POST </button></center>
