--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -4,6 +4,9 @@
     {% if post.published_date %}<br>
     <div class="date">Posted on {{ post.published_date }} IST</div>
     {% endif %}
+    {% if user.is_authenticated %}
+    <div><a href="{% url 'post_edit' pk=post.pk %}" style="text-decoration: none;"><br> <i class="far fa-edit"></i> Edit Post</a></div>
+    {% endif %}
     <h2>{{ post.title }}</h2>
     <div class="text"><p>{{ post.text|linebreaksbr }}</p></div>
 </div>
