--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,12 +1,23 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
- {% for post in posts %}
-<div class="posts">
-    
-    <h2><a href="{% url 'post_detail' pk=post.pk %}" title="Expand Post">{{ post.title }}</a></h2>
-    <div class="text"><p>{{ post.text|linebreaksbr }}</p></div>
-    <div class="date"><p>Posted on {{ post.published_date }}</p></div>
-</div>
- {% endfor %}
+{% for post in posts %}
+<center>
+    <div class="posts">
+        <h2><a href="{% url 'post_detail' pk=post.pk %}" title="Post">{{ post.title|upper }}</a>
+        </h2>
+        <div class="text">
+            <p>{{ post.text|truncatechars:400 }}</p>
+        </div>
+        {% if post.text|length > 200 %}
+        <div class="text" style="text-align: left;"><a href="{% url 'post_detail' pk=post.pk %}" title="Open Post">&nbsp;•••&nbsp;</a></div>
+        {% endif %}
+        <div class="date">
+
+            <p>Posted by {{ post.author|default_if_none:"Anonymous User"|capfirst}} on {{ post.published_date }}</p>
+        </div>
+    </div>
+</center>
+{% endfor %}
 {% endblock %}
+
