--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -97,7 +97,9 @@ h1 {
 <h1><a href="/" style="text-decoration: none; color: black;">&nbsp;Blog</a><br></h1>
 <div class="credits">→ Project by<a href="https://www.instagram.com/alexeysekisov/" style="text-decoration: none;">&nbsp;alexeysekisov,</a>, developed using Django & Python.<a href="/admin/" target="_blank" title="Login" style="text-decoration: none;">&nbsp;Ξ&nbsp;</a></div><br>
 <div class="compose" style="text-decoration: none;"><a href="{% url 'post_new' %}">POST AN UPDATE <i class="far fa-plus-square"></i></span></a></div>
-
+{% if user.is_authenticated %}
+<div style="margin: 10px 0px;">Logged in as: {{request.user}}</div>
+{% endif %}
 <body>
     {% block content %}
     {% endblock %}
