--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -2,7 +2,13 @@
 <html>
 
 <head>
+    {% if post.title %}
+    <title>{{ post.title }}</title>
+    {% else %}
     <title>Blog</title>
+    {% endif %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <style>
 @import url('https://rsms.me/inter/inter.css');
@@ -95,8 +101,13 @@ h1 {
 }
 </style>
 <h1><a href="/" style="text-decoration: none; color: black;">&nbsp;Blog</a><br></h1>
-<div class="credits">→ Project by<a href="https://www.instagram.com/alexeysekisov/" style="text-decoration: none;">&nbsp;alexeysekisov,</a>, developed using Django & Python.<a href="/admin/" target="_blank" title="Login" style="text-decoration: none;">&nbsp;Ξ&nbsp;</a></div><br>
-<div class="compose" style="text-decoration: none;"><a href="{% url 'post_new' %}">POST AN UPDATE <i class="far fa-plus-square"></i></span></a></div>
+<div class="credits">→ Project by<a href="https://www.instagram.com/alexeysekisov/" style="text-decoration: none;">&nbsp;alexeysekisov,</a>, developed using Django & Python.</div><br>
+{% if user.is_anonymous %}
+<div class="compose" style="text-decoration: none;"><a href="{% url 'post_new' %}">Post Anonymously <i class="far fa-plus-square"></i></span></a></div>
+<a href="/admin"><br>Or Login in with existing Account</a>
+{% elif user.is_authenticated %}
+<div class="compose" style="text-decoration: none;"><a href="{% url 'post_new' %}">Post as {{request.user|capfirst}} <i class="far fa-plus-square"></i></span></a></div>
+{% endif %}
 {% if user.is_authenticated %}
 <div style="margin: 10px 0px;">Logged in as: {{request.user}}</div>
 {% endif %}
