--- a/mysite/blog/templates/blog/post_edit.html
+++ b/mysite/blog/templates/blog/post_edit.html
@@ -1,11 +1,17 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-<br>
-    <div style="font-size: 1.5rem;">Latest posts will appear on the top of the website!</div>
-    <div class="posts"><form method="POST" class="token">{% csrf_token %}
-        {{ form.as_p }}
-        <center><button type="submit" class="submit"> POST </button></center>
-    </form></div>
+{% load crispy_forms_tags %}
+<head>
+	<title>Post New Update</title>
+</head>
+    <div class="posts">
+        <form method="POST" class="token">{% csrf_token %}
+            <br>
+            {{ form|crispy }}
+            <div class="date">* Required :P</div>
+            <center><button type="submit" class="submit"> POST </button></center>
+        </form>
+    </div>
     <br>
     <br>
 {% endblock %} 
